# usbutils

./: .gitignore  Makefile.am  configure.ac  lsusb-t.c  lsusb.8.in  lsusb.c  names.c  names.h  usb-spec.h  usb-vendors.h  usbmisc.c  usbmisc.h
